tests/baselines/reference/parserStrictMode5.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode5.ts(2,1): error TS1100: Invalid use of 'eval' in strict mode.
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode5.ts(2,1): error TS2365: Operator '+=' cannot be applied to types '(x: string) => any' and 'number'.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode5.ts (2 errors) ====
    "use strict";
    eval += 1;
    ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    ~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '(x: string) => any' and 'number'.